--- a/ContentPlatform/ContentPlatform.Api/Properties/launchSettings.json
+++ b/ContentPlatform/ContentPlatform.Api/Properties/launchSettings.json
@@ -2,27 +2,27 @@
   "profiles": {
     "http": {
       "commandName": "Project",
-      "launchBrowser": true,
+       "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5000"
+      "applicationUrl": "http://localhost:7000"
     },
     "https": {
       "commandName": "Project",
-      "launchBrowser": true,
+       "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:7001;http://localhost:7000"
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+       "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -30,7 +30,7 @@
     },
     "Docker": {
       "commandName": "Docker",
-      "launchBrowser": true,
+       "launchBrowser": false,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
       "useSSL": true
