--- a/ContentPlatform/ContentPlatform.AppHost/Properties/launchSettings.json
+++ b/ContentPlatform/ContentPlatform.AppHost/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+       "launchBrowser": false,
       "applicationUrl": "https://localhost:17147;http://localhost:15245",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
@@ -16,7 +16,7 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+       "launchBrowser": true,
       "applicationUrl": "http://localhost:15245",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
