--- a/ContentPlatform/Directory.Build.props
+++ b/ContentPlatform/Directory.Build.props
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+<Project>
   <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
-
 </Project>
