feat: 东康网关修改

--- a/ContentPlatform/ContentPlatform.Presentation/wwwroot/appsettings.json
+++ b/ContentPlatform/ContentPlatform.Presentation/wwwroot/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Api": {
-    "ContentPlatformBaseUrl": "http://gateway" 
+    "ContentPlatformBaseUrl": "http://localhost:7000" 
   },
   "AllowedHosts": "*"
 }
