--- a/ContentPlatform/ContentPlatform.Api/Properties/launchSettings.json
+++ b/ContentPlatform/ContentPlatform.Api/Properties/launchSettings.json
@@ -5,7 +5,7 @@
        "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "dev"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:7000"
