--- a/ContentPlatform/ContentPlatform.Api/ContentPlatform.Api.csproj
+++ b/ContentPlatform/ContentPlatform.Api/ContentPlatform.Api.csproj
@@ -12,6 +12,8 @@
   <ItemGroup>
     <PackageReference Include="Carter" Version="9.0.0" />
     <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.2.1" />
+    <PackageReference Include="InfluxDB.Client" Version="4.19.0-dev.15190" />
+    <PackageReference Include="InfluxDB.LineProtocol" Version="1.2.0-dev-00029" />
     <PackageReference Include="ZiggyCreatures.FusionCache" Version="2.2.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
